--- a/app/static/app.css
+++ b/app/static/app.css
@@ -7,7 +7,10 @@
     padding-left: 1px !important;
     padding-right: 1px !important;
 }
-
+#pisSpredsheetGoogle{
+    height:390px;
+    width: 100%;
+}
 #editor{
     height:390px;
 }
