--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -91,6 +91,7 @@
     <script src="static/libs/slickgrid/slick.formatters.js"></script>
     <script src="static/libs/slickgrid/slick.editors.js"></script>
     <script src="static/libs/slickgrid/slick.grid.js"></script>
+    <script src="static/libs/jquerybrowser/jquery.browser.min.js"></script>
     <script src="/static/js/main.js"></script>
     <script src="/static/libs/ace/ace.js" type="text/javascript" charset="utf-8"></script>
   </body>
