--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -29,19 +29,7 @@ The editor would be embedded here.
                           </div>
                       </div>
                   </div>
-                  <div class="panel panel-success">
-                      <div class="panel-heading">
-                          <h3 class="panel-title">PIS Editor</h3>
-                      </div>
-                      <div class="panel-body">
-                          <div style="width:540px; overflow:hidden;">
-                              <div id="pisSpreadsheet" style="width:100%;height:500px;"></div>
-                          </div>
-                          
-                         <!--iframe width='500' height='300' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0AslffdOlmfdEdE1ndU9jcGJ0aFMyM1o1QlBTVzFqZUE&single=true&gid=0&output=html&widget=true'></iframe-->
-                      </div>
-                  </div>
-              </div>
+                               </div>
 
               <div class="col-md-3" id="appcolumn3">
                   <div class="panel panel-info">
@@ -53,6 +41,20 @@ The editor would be embedded here.
                       </div>
                   </div>
               </div>
+          </div>
+          <div class="row">
+               <div class="panel panel-success">
+                      <div class="panel-heading">
+                          <h3 class="panel-title">PIS Editor</h3>
+                      </div>
+                      <div class="panel-body" style="overflow:hidden;">
+                          <div style="width:1000px; margin-left: 10px; overflow:hidden;">
+                              <div id="pisSpreadsheet" style="width:100%;height:500px;"></div>
+                          </div>
+                          
+                         <!--iframe width='500' height='300' frameborder='0' src='https://docs.google.com/spreadsheet/pub?key=0AslffdOlmfdEdE1ndU9jcGJ0aFMyM1o1QlBTVzFqZUE&single=true&gid=0&output=html&widget=true'></iframe-->
+                      </div>
+                  </div>
           </div>
       </div>
 {% endblock %}
