--- a/app/static/app.css
+++ b/app/static/app.css
@@ -7,6 +7,13 @@
     padding-left: 1px !important;
     padding-right: 1px !important;
 }
+.slick-header-column.ui-state-default{
+    height: 25px !important;
+}
+.ui-widget-content .slick-cell{
+    border: 1px solid rgba(0, 0, 0, .2) !important;
+}
+
 #pisSpredsheetGoogle{
     height:390px;
     width: 100%;
