Added scrolling to panels

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,17 +4,17 @@
       <div style="margin-top: 60px;">
           <div class="row">
               <div class="col-md-3" id="appcolumn1">
-                  <div class="panel panel-info">
+                  <div class="panel panel-info" style="height:200px;">
                       <div class="panel-heading">
                           <h3 class="panel-title">Source Selector</h3>
                       </div>
-                      <div class="panel-body" style="overflow:hidden">
+                      <div class="panel-body" style="overflow:scroll">
                           <div id="jstree_selector_div"></div>
                       </div>
                   </div>
               </div>
 
-              <div class="col-md-6" id="appcolumn2">
+              <div class="col-md-6" id="appcolumn2" style="height:200px;">
                   <div class="panel panel-info">
                       <div class="panel-heading">
                           <h3 class="panel-title">Section Editor</h3>
@@ -24,19 +24,20 @@
 <html lang="en">
 The editor would be embedded here.
 
-</html>
 
+
+</html>
                           </div>
                       </div>
                   </div>
                                </div>
 
-              <div class="col-md-3" id="appcolumn3">
+              <div class="col-md-3" id="appcolumn3" style="height: 200px;">
                   <div class="panel panel-info">
                       <div class="panel-heading">
                           <h3 class="panel-title">Levels</h3>
                       </div>
-                      <div class="panel-body" style="overflow:hidden">
+                      <div class="panel-body" style="height:160px; overflow:scroll">
                           <div id="jstree_levels_div"></div>
                       </div>
                   </div>
@@ -47,7 +48,7 @@ The editor would be embedded here.
                       <div class="panel-heading">
                           <h3 class="panel-title">PIS Editor</h3>
                       </div>
-                      <div class="panel-body" style="overflow:hidden;">
+                      <div class="panel-body" style="overflow:scroll;">
                           <div style="width:1000px; margin-left: 10px; overflow:hidden;">
                               <div id="pisSpreadsheet" style="width:100%;height:500px;"></div>
                           </div>
